[package]
name = "memblocks"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-memblocks/"
repository = "https://github.com/rust-bitcoin/rust-memblocks/"
description = "In-Memory Bitcoin blockchain"
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"

[lib]
name = "memblocks"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.11.0"

[patch.crates-io]
bitcoin = { git = "https://github.com/tamasblummer/rust-bitcoin", branch = "memblocks"  }