[package]
name = "bitcoin-chain"
version = "0.3.1"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoin-chain/"
repository = "https://github.com/rust-bitcoin/rust-bitcoin-chain/"
description = "In-Memory Bitcoin blockchain"
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"

[lib]
name = "bitcoin_chain"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.15"
